# secuarden-headers

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: basic_usage.py  sample_urls.txt
secuarden_headers/: __init__.py  cli.py  headers.py  scanner.py
tests/: __init__.py  test_scanner.py
